Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39902

Stack overflow when resizing QListView

XMLWordPrintable

    • fc4993be1fa7673016b6e5d81134463f163051f6

      Attached example crashes to stack overflow related to scrollbars.

        1. qtbug39902_stack.txt
          64 kB
          Friedemann Kleint
        2. qtbug39902_stack4.8.txt
          4.93 MB
          Joni Poikelin
        3. qtbug39902.zip
          2 kB
          Friedemann Kleint
        4. QTBUG-39902-QListViewBug.tar.gz
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-39902
        # Subject Branch Project Status CR V

            cschleifenbaum Christoph Schleifenbaum
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes